Updates to Code Examples

--- a/notebooks/CodeSamplesCPSC1012.ipynb
+++ b/notebooks/CodeSamplesCPSC1012.ipynb
@@ -208,7 +208,7 @@
       "text/html": [
        "\r\n",
        "<div>\r\n",
-       "    <div id='dotnet-interactive-this-cell-17063.Microsoft.DotNet.Interactive.Http.HttpPort' style='display: none'>\r\n",
+       "    <div id='dotnet-interactive-this-cell-18158.Microsoft.DotNet.Interactive.Http.HttpPort' style='display: none'>\r\n",
        "        The below script needs to be able to find the current output cell; this is an easy method to get it.\r\n",
        "    </div>\r\n",
        "    <script type='text/javascript'>\r\n",
@@ -253,12 +253,12 @@
        "}\r\n",
        "\r\n",
        "function loadDotnetInteractiveApi() {\r\n",
-       "    probeAddresses([\"http://192.168.1.83:1025/\", \"http://192.168.1.93:1025/\", \"http://127.0.0.1:1025/\"])\r\n",
+       "    probeAddresses([\"http://192.168.1.83:1024/\", \"http://192.168.1.93:1024/\", \"http://127.0.0.1:1024/\"])\r\n",
        "        .then((root) => {\r\n",
        "        // use probing to find host url and api resources\r\n",
        "        // load interactive helpers and language services\r\n",
        "        let dotnetInteractiveRequire = require.config({\r\n",
-       "        context: '17063.Microsoft.DotNet.Interactive.Http.HttpPort',\r\n",
+       "        context: '18158.Microsoft.DotNet.Interactive.Http.HttpPort',\r\n",
        "                paths:\r\n",
        "            {\r\n",
        "                'dotnet-interactive': `${root}resources`\r\n",
@@ -327,19 +327,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "849fcba6-39da-49a3-8204-728620b77321",
+   "metadata": {},
+   "source": [
+    "# Original Values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bec5de05-4b7a-419b-9aa6-ce7146bf3d72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Values\n",
+      "a = 2, b = 3, c = 4, and d = 5\n"
+     ]
+    }
+   ],
    "source": [
-    "Console.WriteLine(\"Original Values\");"
+    "Console.WriteLine(\"Original Values\");\n",
+    "Console.WriteLine(\"a = \" + a + \", b = \" + b + \", c = \" + c + \", and d = \" + d);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74832772-f0a0-41af-8f97-33de82bc9b76",
+   "metadata": {},
+   "source": [
+    "# Integer Math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d6b3ba7-4bc8-42e8-8c6b-983b5541c5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integer Math\n",
+      "a / b = 0\n",
+      "b / a = 1\n",
+      "a % b = 2\n",
+      "b % a = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(\"Integer Math\");\n",
+    "Console.WriteLine(\"a / b = \" + a / b);\n",
+    "Console.WriteLine(\"b / a = \" + b / a);\n",
+    "Console.WriteLine(\"a % b = \" + a % b);\n",
+    "Console.WriteLine(\"b % a = \" + b % a);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfc98c61-435a-43f1-bc35-4f825cebd571",
+   "metadata": {},
+   "source": [
+    "# Real Number Math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6ddf7828-6f02-495d-baf6-2cd82700dffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real Number Math\n",
+      "a / d = 0.4\n",
+      "c / d = 0.8\n",
+      "d / b = 1.6666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(\"Real Number Math\");\n",
+    "Console.WriteLine(\"a / d = \" + a / d);\n",
+    "Console.WriteLine(\"c / d = \" + c / d);\n",
+    "Console.WriteLine(\"d / b = \" + d / b);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55b3d9e-b153-4d3a-bac4-f9b8eccfe8dc",
+   "metadata": {},
+   "source": [
+    "# Combined Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7e195643-0e72-478d-b3b3-c82c41c06bf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = a + 3: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = a + 3;\n",
+    "Console.WriteLine(\"a = a + 3: \" + a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ad0475e9-fb49-46f7-920c-a5323e84b578",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a += 3: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a += 3;\n",
+    "Console.WriteLine(\"a += 3: \" + a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7b5bb45-b82c-4b13-b8c5-046fc78e7aa4",
+   "metadata": {},
+   "source": [
+    "# Same Operation, Different Syntax 👆\n",
+    "* The two operations above have the same result but use different syntax.\n",
+    "* We focus on readability in our code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f266065e-9463-46d0-beb4-c9b4030c6b2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a -= b: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a -= b;\n",
+    "Console.WriteLine(\"a -= b: \" + a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e051ca0-dc6d-4cb1-b8f7-584639489af0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d *= c: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "d *= c;\n",
+    "Console.WriteLine(\"d *= c: \" + a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9ec57280-2670-4b17-bd6a-3e87213dd556",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c /= d: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "c /= d;\n",
+    "Console.WriteLine(\"c /= d: \" + a)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d6b3ba7-4bc8-42e8-8c6b-983b5541c5d0",
+   "id": "f994718b-f5a2-4f9d-a039-e88b24bc93fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -347,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddf7828-6f02-495d-baf6-2cd82700dffe",
+   "id": "2347ac89-27ad-4db8-89d9-3fbdc3874186",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6e1f34-0646-474f-ad64-1355aa95154b",
+   "id": "6982711f-3baf-4516-b047-161c0397e32a",
    "metadata": {},
    "outputs": [],
    "source": []
