--- a/notebooks/Notebook-06-DecisionMakingTwo.ipynb
+++ b/notebooks/Notebook-06-DecisionMakingTwo.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "source": [
     "# Question 2\n",
-    "* Write a program that can allow the user to perform some simple unit conversions. The program should display a menu of available options to the user, prompt for the desired option, and then prompt for the value. The conversion should be performed and the new value should be displayed. Use the following table for conversions:\n",
+    "* Write a program that can allow the user to perform some simple unit conversions. The program should display a menu of available options to the user, prompt for the desired option, and then prompt for the myValue. The conversion should be performed and the new myValue should be displayed. Use the following table for conversions:\n",
     "\n",
     "| Conversion                    \t| Formula                     \t|\n",
     "|-------------------------------\t|-----------------------------\t|\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3cd1373a-546c-40bc-a3be-10f857e7570d",
    "metadata": {},
    "outputs": [
@@ -130,13 +130,13 @@
       "\n",
       "Please input the number:\n",
       "What value do you want to convert?\n",
-      "65.2 inch(es) is equal to 165.608 centimeter(s)\n"
+      "65.2 inch(es) is equal to 165.61 centimeter(s)\n"
      ]
     }
    ],
    "source": [
     "int choice;\n",
-    "double value;\n",
+    "double myValue;\n",
     "double answer;\n",
     "\n",
     "Console.WriteLine(\"Hello to the conversion application!\\n\" +\n",
@@ -153,27 +153,27 @@
     "\n",
     "Console.WriteLine(\"What value do you want to convert?\");\n",
     "/*\n",
-    "value = double.Parse(Console.ReadLine());\n",
+    "myValue = double.Parse(Console.ReadLine());\n",
     "*/\n",
-    "value = 65.2;\n",
+    "myValue = 65.2;\n",
     "\n",
     "switch (choice)\n",
     "{\n",
     "    case 1:\n",
-    "        answer = value / 2.2046;\n",
-    "        Console.WriteLine($\"{value} pound(s) is equal to {answer:N3} kilogram(s)\");\n",
+    "        answer = myValue / 2.2046;\n",
+    "        Console.WriteLine($\"{myValue} pound(s) is equal to {answer:N1} kilogram(s)\");\n",
     "        break;\n",
     "    case 2:\n",
-    "        answer = value / 33.8140226;\n",
-    "        Console.WriteLine($\"{value} ounce(s) is equal to {answer:N3} liter(s)\");\n",
+    "        answer = myValue / 33.8140226;\n",
+    "        Console.WriteLine($\"{myValue} ounce(s) is equal to {answer:N4} liter(s)\");\n",
     "        break;\n",
     "    case 3:\n",
-    "        answer = value / 0.39370;\n",
-    "        Console.WriteLine($\"{value} inch(es) is equal to {answer:N3} centimeter(s)\");\n",
+    "        answer = myValue / 0.39370;\n",
+    "        Console.WriteLine($\"{myValue} inch(es) is equal to {answer:N2} centimeter(s)\");\n",
     "        break;\n",
     "    case 4:\n",
-    "        answer = (value - 32) / 1.800;\n",
-    "        Console.WriteLine($\"{value} fahrenheit is equal to {answer:N3} celsius\");\n",
+    "        answer = (myValue - 32) / 1.800;\n",
+    "        Console.WriteLine($\"{myValue} fahrenheit is equal to {answer:N1} celsius\");\n",
     "        break;\n",
     "    default:\n",
     "        Console.WriteLine($\"{choice} is not a valid choice, please try again.\");\n",
