Updating Problem Sets

--- a/notebooks/Notebook-02-VariableAndConstant.ipynb
+++ b/notebooks/Notebook-02-VariableAndConstant.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "4740ec32-d01e-4e33-bfbe-0f878c7247b0",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
      "output_type": "stream",
      "text": [
       "Please enter the number of cookies you ate:\n",
-      "The number of calories consumed is 403.85\n"
+      "The number of calories consumed is 1,076.9\n"
      ]
     }
    ],
@@ -137,11 +137,11 @@
     "double numberOfCalories;\n",
     "\n",
     "Console.WriteLine(\"Please enter the number of cookies you ate:\");\n",
-    "numberOfCookies = 6; // numberOfCookies = int.Parse(Console.ReadLine());\n",
+    "numberOfCookies = 16; // numberOfCookies = int.Parse(Console.ReadLine());\n",
     "\n",
     "numberOfCalories = numberOfCookies / ((double)cookiesPerBag / servingsPerBag) * caloriesPerServing;\n",
     "\n",
-    "Console.WriteLine($\"The number of calories consumed is {numberOfCalories:0.00}\");"
+    "Console.WriteLine($\"The number of calories consumed is {numberOfCalories:N1}\");"
    ]
   },
   {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "f602941a-817a-4149-9432-494e63da3b4e",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
     "\n",
     "averageTestScore = (testScore1 + testScore2 + testScore3) / 3;\n",
     "\n",
-    "Console.WriteLine($\"The average test score is {averageTestScore:0.00}\");"
+    "Console.WriteLine($\"The average test score is {averageTestScore:F2}\");"
    ]
   },
   {
