--- a/notebooks/Notebook-06-DecisionMakingTwo.ipynb
+++ b/notebooks/Notebook-06-DecisionMakingTwo.ipynb
@@ -9,15 +9,15 @@
     "* Write a program for an Internet service provider so they can calculate how much to bill their customers. The provider offers customers 3 packages:\n",
     "| Package \t| Cost Calculation                                                                   \t|\n",
     "|---------\t|------------------------------------------------------------------------------------\t|\n",
-    "| A       \t| $9.95 per month for up to 10 hours; additional hours are billed at $2.00 per hour  \t|\n",
-    "| B       \t| $13.95 per month for up to 20 hours; additional hours are billed at $1.00 per hour \t|\n",
-    "| C       \t| $19.95 per month for unlimited hours                                               \t|\n",
+    "| A       \t| \\$9.95 per month for up to 10 hours; additional hours are billed at \\$2.00 per hour  \t|\n",
+    "| B       \t| \\$13.95 per month for up to 20 hours; additional hours are billed at \\$1.00 per hour \t|\n",
+    "| C       \t| \\$19.95 per month for unlimited hours                                               \t|\n",
     "* The program should prompt for the letter of the service package (A, B, or C) and the number of hours they have used if either option A or B has been selected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ab911437-d777-4d48-b6f1-66e70b442665",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,9 @@
       "\n",
       "How many full hours have you used on your internet service?\n",
       "\n",
-      "Thank you for choosing package A\n",
-      "Your bill is $39.95/month\n"
+      "Thank you for choosing package B\n",
+      "Your bill is $18.95/month\n",
+      "Thank you for being a valued customer.\n"
      ]
     }
    ],
@@ -48,48 +49,53 @@
     "    \"C: $19.95 per month for unlimited hours\\n\");\n",
     "\n",
     "// package = char.Parse(Console.ReadLine());\n",
-    "package = 'A';\n",
+    "package = 'B';\n",
     "\n",
-    "if (package == 'a' || package == 'A' || package == 'b' || package == 'B')\n",
+    "if (package == 'a' || package == 'A' || package == 'b' || package == 'B' || package == 'c' || package == 'C'  )\n",
     "{\n",
-    "    Console.WriteLine(\"How many full hours have you used on your internet service?\\n\");\n",
-    "    // numberOfHours = int.Parse(Console.ReadLine());\n",
-    "    numberOfHours = 25;\n",
-    "    switch (package)\n",
+    "    if (package == 'a' || package == 'A' || package == 'b' || package == 'B')\n",
     "    {\n",
-    "        case 'a':\n",
-    "        case 'A':\n",
-    "            if (numberOfHours > 10)\n",
-    "            {\n",
-    "                monthlyBill = 9.95 + (numberOfHours - 10) * 2;\n",
-    "            } // end of if\n",
-    "            else\n",
-    "            {\n",
-    "                monthlyBill = 9.95;\n",
-    "            } // end of else\n",
-    "            Console.WriteLine($\"Thank you for choosing package {package}\\n\" +\n",
-    "                              $\"Your bill is {monthlyBill:C}/month\");\n",
-    "            break;\n",
-    "        default:\n",
-    "            if (numberOfHours > 20)\n",
-    "            {\n",
-    "                monthlyBill = 13.95 + (numberOfHours - 20);\n",
-    "            } // end of if\n",
-    "            else\n",
-    "            {\n",
-    "                monthlyBill = 13.95;\n",
-    "            } // end of else\n",
-    "            Console.WriteLine($\"Thank you for choosing package {package}\\n\" +\n",
-    "                              $\"Your bill is {monthlyBill:C}/month\");\n",
-    "            break;\n",
-    "    } // end of switch\n",
+    "        Console.WriteLine(\"How many full hours have you used on your internet service?\\n\");\n",
+    "        // numberOfHours = int.Parse(Console.ReadLine());\n",
+    "        numberOfHours = 25;\n",
+    "        switch (package)\n",
+    "        {\n",
+    "            case 'a':\n",
+    "            case 'A':\n",
+    "                if (numberOfHours > 10)\n",
+    "                {\n",
+    "                    monthlyBill = 9.95 + (numberOfHours - 10) * 2;\n",
+    "                } // end of if\n",
+    "                else\n",
+    "                {\n",
+    "                    monthlyBill = 9.95;\n",
+    "                } // end of else\n",
+    "                break;\n",
+    "            default:\n",
+    "                if (numberOfHours > 20)\n",
+    "                {\n",
+    "                    monthlyBill = 13.95 + (numberOfHours - 20);\n",
+    "                } // end of if\n",
+    "                else\n",
+    "                {\n",
+    "                    monthlyBill = 13.95;\n",
+    "                } // end of else\n",
+    "                break;\n",
+    "        } // end of switch\n",
+    "    } // end of if\n",
+    "    else\n",
+    "    {\n",
+    "        monthlyBill = 19.95;\n",
+    "    } // end of else\n",
+    "    Console.WriteLine($\"Thank you for choosing package {package}\\n\" +\n",
+    "                          $\"Your bill is {monthlyBill:C}/month\\n\" +\n",
+    "                      \"Thank you for being a valued customer.\");\n",
     "} // end of if\n",
     "else\n",
     "{\n",
-    "    monthlyBill = 19.95;\n",
-    "    Console.WriteLine($\"Thank you for choosing package {package}\\n\" +\n",
-    "                      $\"Your bill is {monthlyBill:C}/month\");\n",
-    "} // end of else"
+    "    Console.WriteLine($\"That isn't a package. Please try again.\");\n",
+    "}\n",
+    "    "
    ]
   },
   {
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3cd1373a-546c-40bc-a3be-10f857e7570d",
    "metadata": {},
    "outputs": [
@@ -130,7 +136,7 @@
       "\n",
       "Please input the number:\n",
       "What value do you want to convert?\n",
-      "65.2 inch(es) is equal to 165.61 centimeter(s)\n"
+      "65.2 inch(es) is equal to 165.6 centimeter(s)\n"
      ]
     }
    ],
@@ -169,7 +175,7 @@
     "        break;\n",
     "    case 3:\n",
     "        answer = myValue / 0.39370;\n",
-    "        Console.WriteLine($\"{myValue} inch(es) is equal to {answer:N2} centimeter(s)\");\n",
+    "        Console.WriteLine($\"{myValue} inch(es) is equal to {answer:##,#0.0} centimeter(s)\");\n",
     "        break;\n",
     "    case 4:\n",
     "        answer = (myValue - 32) / 1.800;\n",
