Adding new problems

--- a/notebooks/Notebook-10-LoopsThree.ipynb
+++ b/notebooks/Notebook-10-LoopsThree.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Question 1\n",
-    "A bacteriologist determines that the approximate final population of bacteria present in a culture after time (in days) is given by the following formula: \n",
+    "A bacteriologist determines that the approximate final population of bacteria present in a culture after a period time (in days) is given by the following formula: \n",
     "\n",
-    "FinalPopulation = InitialPopulation * e^(GrowthRate * Time) \n",
+    "finalPopulation = initialPopulation * e^(growthRate * time) \n",
     "\n",
     "where InitialPopulation is the number present at the beginning of the observation period (Note: InitialPopulation does not change its value). Let the user input the InitialPopulation, which is the number of bacteria present at the beginning of the trial and the GrowthRate (as a percentage). Then compute the number of bacteria in the culture after each day for the first 10 days (Time will have values 1 through 10). Do this in a loop so the user can see the results in a table (properly format your table with column headers and a title). The output table should have headings for Day and Number of Bacteria Present (on that day). \n",
     "\n",
